--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "simple-quadtree": "^0.1.3",
+    "three": "^0.161.0",
+    "three-orbit-controls": "^82.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,8 +26,13 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
+    ],
+    "globals": {
+      "React": true,
+      "Link": true,
+      "InstancedMesh": true
+    }
+  },  
   "browserslist": {
     "production": [
       ">0.2%",
